# CS317-SadishAlgorithms

./: README.md
Project1/: CMakeLists.txt  cc0032_report.txt
Project1/include/: comparator.hpp  includes.hpp  matrix.hpp
Project1/inventory/: test_max.txt
Project1/src/: Matrix.cpp  comparator.cpp  main.cpp
Project2/: CMakeLists.txt
Project2/include/: OpBST.hpp  dbg.hpp  includes.hpp
Project2/inventory/: input.txt
Project2/src/: OpBST.cpp  main.cpp
